--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: linear-gradient(to bottom, #ccffff 0%, #ffffff 100%); */
+  background-image: linear-gradient(135deg, #536976 10%, #292E49 100%);
+  min-height:100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 code {
